5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1596_2895.log
== TEST (2019-03-21 19:14:46) 
-- CODE:
quant=int(input("Digite quantos jogos vai comprar? "))
valor=float(input("Digite o valor do jogo? "))
frente=float(input("Digite o valor do frete? "))
preco=frete+valor*quant
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco=frete+valor*quant
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:58) 
-- CODE:
quant=int(input("Digite quantos jogos vai comprar? "))
valor=float(input("Digite o valor do jogo? "))
frete=float(input("Digite o valor do frete? "))
preco=frete+valor*quant
print(preco)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:15:02) 
-- CODE:
quant=int(input("Digite quantos jogos vai comprar? "))
valor=float(input("Digite o valor do jogo? "))
frete=float(input("Digite o valor do frete? "))
preco=frete+valor*quant
print(preco)
-- EXECUTION TIME:
0.259702
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
